Commented out v0.4 dependencies in home page

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -120,10 +120,10 @@
                 (&gt;=2.8.10.1, Unicode version required) </li>
               <li> <a href="http://matplotlib.org/">matplotlib</a>
                 (&gt;=1.1.1)</li>
-              <li> <a href="http://cairographics.org/pycairo/">pycairo</a>
+<!--              <li> <a href="http://cairographics.org/pycairo/">pycairo</a>
                 (&gt;=1.8.8)</li>
               <li> <a href="http://cairographics.org/pyrsvg/">pyrsvg</a>
-                (&gt;=2.32)</li>
+                (&gt;=2.32)</li>-->
             </ul>
             <span style="text-decoration: underline;">Optional
               dependencies</span>
