Target user group section updated

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -66,14 +66,14 @@
           </th>
           <td style="vertical-align: top; text-align: left;">
             Directly using Python code in a grid is a core feature of pyspread.
-            The feature set is defined indirectly by the target user group of
-            pyspread:<p>
+            The target user group has experience with or wants to learn the 
+            programming language Python:<p>
             <ul>
-                <li>Peter needs to document layout planning projects.
-                    He has a large base of Python code for calculations.
-                    Besides, he wants to visualize 2D building layouts and calculation
-                    charts. Peter has to provide documentation in pdf files
-                    with a consistant layout.
+                <li>Peter regularly documents layout planning projects. He already has
+                    a large base of Python code for doing calculations in
+                    this task. Peter has to provide project documentation in pdf files
+                    with a consistant layout. In the documentation, he has to visualize
+                    building layouts and calculation charts. 
                 <li>Clara is a research engineer and wants to quickly create
                     publication ready figures for her publications. She is proficient
                     with Python and wants to combine the flexibility of matplotlib 
