Screenshots on home page updated

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -24,9 +24,9 @@
           <td style="vertical-align: top;"><br>
           </td>
           <td style="width: 211px;"> <a
-              href="images/screenshot_main_window_0.2.0.png"><img
+              href="images/screenshot_main_window.png"><img
                 alt="Pyspread main window"
-                src="images/screenshot_main_window_0.2.0_preview.png"
+                src="images/screenshot_main_window_preview.png"
                 style="border: 0px solid ; width: 200px; height: 154px;"></a><br>
           </td>
         </tr>
