Dependencies of v0.4 updated

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -106,8 +106,7 @@
           <th style="vertical-align: top; width: 102px;"> Requirements<br>
           </th>
           <td style="vertical-align: top;"> Pyspread is designed for
-            Linux and other GTK platforms. Windows<sup>&reg;</sup> is
-            supported starting with version 0.2.4.
+            Linux and other GTK platforms. Windows<sup>&reg;</sup> is also supported.
             <p><br>
               <span style="text-decoration: underline;">Dependencies</span><br>
             </p>
@@ -120,10 +119,8 @@
                 (&gt;=2.8.10.1, Unicode version required) </li>
               <li> <a href="http://matplotlib.org/">matplotlib</a>
                 (&gt;=1.1.1)</li>
-<!--              <li> <a href="http://cairographics.org/pycairo/">pycairo</a>
+              <li> <a href="http://cairographics.org/pycairo/">pycairo</a>
                 (&gt;=1.8.8)</li>
-              <li> <a href="http://cairographics.org/pyrsvg/">pyrsvg</a>
-                (&gt;=2.32)</li>-->
             </ul>
             <span style="text-decoration: underline;">Optional
               dependencies</span>
@@ -138,6 +135,8 @@
               <li><a href="http://jedi.jedidjah.ch">jedi</a>
                 (&gt;=0.8.0, for tab completion and context help in the
                 entry line)</li>
+              <li> <a href="http://cairographics.org/pyrsvg/">pyrsvg</a>
+                (&gt;=2.32, for displaying SVG files in cells)</li>
               <li><a href="http://matplotlib.org/basemap/">basemap</a>
                 (&gt;=1.0.7, for the weather example pys file)<br>
               </li>
@@ -179,5 +178,5 @@
     <p><span style="font-style: italic;">Copyright Martin Manns<br>
         Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
           style="font-style: italic;">
-      </span> <span style="font-style: italic;">Last changed: 1. November
+      </span> <span style="font-style: italic;">Last changed: 14. December
         2014</span></p>
