--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -6,13 +6,17 @@
             width: 102px;"> latest<br>
           </th>
           <td style="vertical-align: top;"> <a
-href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.3.3.tar.gz#md5=f15d309de30c899ac5914b2e50d24b28">version
+href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.4.tar.gz#md5=6188e2c4c2ed9c58add7f26b70b7e05d">version
 
-              0.3.3</a> </td>
+              0.4</a> </td>
         </tr>
         <tr>
           <th style="vertical-align: top; width: 102px;">previous</th>
           <td style="vertical-align: top;">
+            <a
+href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.3.3.tar.gz#md5=f15d309de30c899ac5914b2e50d24b28">version
+
+              0.3.3<br>
             <a
 href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.3.2.tar.gz#md5=7040fb44b560235fa3336bd14679b1c3">version
 
@@ -229,5 +233,4 @@ href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=se
     <p><span style="font-style: italic;">Copyright Martin Manns<br>
         Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
           style="font-style: italic;">
-      </span> <span style="font-style: italic;">Last changed: 06.
-        September 2014</span></p>
+      </span> <span style="font-style: italic;">Last changed: 14. December 2014</span></p>
