--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -131,7 +131,7 @@
               <li> <a href="http://www.python-excel.org/">xlrd</a>
                 (&gt;=0.9.2, for loading Excel<sup>&reg;</sup> files)</li>
               <li><a href="http://www.python-excel.org/">xlwt</a>
-                (&gt;=0.9.2, for saving Excel files)</li>
+                (&gt;=0.9.2, for saving Excel<sup>&reg;</sup> files)</li>
               <li><a href="http://jedi.jedidjah.ch">jedi</a>
                 (&gt;=0.8.0, for tab completion and context help in the
                 entry line)</li>
