Windows installation instructions updated

--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -177,6 +177,9 @@ href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=se
                 Make sure to use the Python2 version.<br>
                 <br>
               </li>
+              <li>Download and install Cairo and pycairo. You may get working binaries 
+              <a href="http://www.lfd.uci.edu/~gohlke/pythonlibs/">here</a>.
+              </li>
               <li>Download and install <a
                   href="http://www.wxpython.org/download.php#stable">wxPython
 
