Download page polish

--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -178,7 +178,7 @@ href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=se
                 <br>
               </li>
               <li>Download and install Cairo and pycairo. You may get working binaries 
-              <a href="http://www.lfd.uci.edu/~gohlke/pythonlibs/">here</a>.
+              <a href="http://www.lfd.uci.edu/~gohlke/pythonlibs/">here</a>.<br> <br>
               </li>
               <li>Download and install <a
                   href="http://www.wxpython.org/download.php#stable">wxPython
