Download Web page revamped

--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -3,170 +3,104 @@
       <tbody>
         <tr>
           <th style="vertical-align: top; background-color: white;
-            width: 102px;"> latest<br>
-          </th>
-          <td style="vertical-align: top;"> <a
-href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.4.tar.gz#md5=6188e2c4c2ed9c58add7f26b70b7e05d">version
-
-              0.4</a> </td>
-        </tr>
-        <tr>
-          <th style="vertical-align: top; width: 102px;">previous</th>
-          <td style="vertical-align: top;">
+            width: 102px;">source </th>
+          <td style="vertical-align: top;">These instructions are for
+            installing the source tarball<br>
+            <br>
             <a
-href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.3.3.tar.gz#md5=f15d309de30c899ac5914b2e50d24b28">version
-
-              0.3.3<br>
-            <a
-href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.3.2.tar.gz#md5=7040fb44b560235fa3336bd14679b1c3">version
-
-              0.3.2<br>
-            <a
-href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.3.1.tar.gz#md5=45158e467143fcd4328866af7c8cdcdc">version
-
-              0.3.1<br>
-            <a
-href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.3.0.tar.gz#md5=55962ead5c2a45c059a457318f533f07">version
-
-              0.3.0<br>
-            <a
-href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.7.tar.gz#md5=2306a96124edbb46230ea5cb1199e3c0">version
-
-              0.2.7</a><br>
-            <a
-href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.6.tar.gz#md5=58777ac67dfe044370331f2a7f887a40">version
-
-              0.2.6</a><br>
-            <a
-href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.5.tar.gz#md5=19962c8e2626e285ec8cabf96f9bc60c">version
-
-              0.2.5</a><br>
-            <a
-href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.4.tar.gz#md5=0b738a605408d021f65683073f6e3a4a">version
-
-              0.2.4</a><br>
-            <a
-href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.3.tar.gz#md5=c1f5fbb05f6b64cacfb49db5c38a80e1">version
-
-              0.2.3</a> (Windows incompatible)<br>
-            <a
-              href="https://github.com/downloads/manns/pyspread/pyspread-0.2.2.tar.gz">version
-
-              0.2.2</a> (Windows incompatible)<br>
-            <a
-              href="https://github.com/downloads/manns/pyspread/pyspread-0.2.1.tar.gz">version
-
-              0.2.1</a> (Windows incompatible)<br>
-            <a
-              href="https://github.com/downloads/manns/pyspread/pyspread-0.2.0.tar.gz">version
-
-              0.2.0</a> (Windows incompatible)<br>
-            <a
-              href="https://github.com/downloads/manns/pyspread/pyspread-0.1.2.tar.gz">version
-
-              0.1.2</a><br>
-          </td>
-        </tr>
-        <tr>
-          <th style="vertical-align: top; width: 102px;">other sites<br>
-          </th>
-          <td style="vertical-align: top;"> <a
-              href="http://sourceforge.net/projects/pyspread/">SourceForge</a><br>
-          </td>
-        </tr>
-        <tr>
-          <th style="vertical-align: top; width: 102px;"> installation<br>
-            (source)<br>
-          </th>
-          <td style="vertical-align: top;"> <a
-href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=search">
-            </a>
+href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.4.tar.gz#md5=6188e2c4c2ed9c58add7f26b70b7e05d">pyspread
+              v0.4</a>.<br>
+            <br>
+            Installation:<br>
             <ol>
-              <li>Download the pyspread tarball and extract at a
-                convenient place<br>
-                <tt><br>
-                  tar xzvf <span style="font-family:
-                    Arial,Helvetica,sans-serif;">pyspread&lt;version&gt;.tar.gz<br>
-                    <br>
-                  </span></tt></li>
-              <li>In case you do not have it already get and install
-                Python, wxpython and numpy<br>
-                If you want the examples to work, install gmpy, R and
-                rpy.<br>
+              <li>Ensure that <span style="text-decoration: underline;">all</span>
+                dependencies are installed.<br>
                 <br>
               </li>
-              <li><span style="font-weight: bold;">Really do check the
-                  version requirements</span> that are mentioned on the
-                main page.<br>
+              <li>Unpack the tarball<tt> </tt><br>
                 <br>
               </li>
-              <li>Get install privileges (e.g. become root)<br>
+              <li>cd to the extraction directory <br>
                 <br>
               </li>
-              <li>Change into the directory and type<br>
-                <tt><br>
-                  python setup.py install</tt><br>
-                <br>
-              </li>
-              <li>Windows: Replace <i>python</i> with your Python
-                interpreter (absolute path)<br>
-                <br>
-              </li>
-              <li>Become normal user again<br>
-                <br>
-              </li>
-              <li>If upgrading to version 0.2.2 remove the config file<br>
-                <br>
-                <tt>rm ~/.pyspreadrc</tt><br>
-                <br>
-              </li>
-              <li>Start pyspread by typing<br>
-                <br>
-                <tt>pyspread</tt><br>
-                <br>
-              </li>
-              <li>Enjoy</li>
+              <li>Type in <br>
+                <tt>python setup.py install </tt></li>
             </ol>
           </td>
         </tr>
         <tr>
-          <th style="vertical-align: top; width: 102px;"> installation<br>
-            (debian, ubuntu)<br>
-          </th>
-          <td style="vertical-align: top;">
-            <ol>
-              <li>Become root<br>
-                <br>
-              </li>
-              <li>Type<br>
-                <br>
-                <tt>aptitude install pyspread</tt><br>
-                <br>
-                or install via apt, synaptic, ...<br>
-                <br>
-              </li>
-              <li>If you had previoussly installed a non-release version
-                from git remove the config file<br>
-                <br>
-                <tt>exit<br>
-                  rm ~/.pyspreadrc</tt><br>
-                <br>
-              </li>
-              <li>Start pyspread by typing<br>
-                <br>
-                <tt>pyspread</tt><br>
-                <br>
-              </li>
-              <li>Enjoy</li>
-            </ol>
+          <th style="vertical-align: top; width: 102px;">linux</th>
+          <td style="vertical-align: top;"> The following distributions
+            provide pyspread as a package (latest release linked):<br>
+            <br>
+            <table style=" text-align: left; width: 325px;" border="1"
+              cellpadding="4" cellspacing="0">
+              <tbody>
+                <tr>
+                  <td style="text-align: center;"><img style=" width:
+                      24px; height: 24px;" alt="Arch logo"
+                      src="../../images/arch-logo-small.png"
+                      align="middle"><br>
+                  </td>
+                  <td style="text-align: left;">Arch</td>
+                  <td><a
+                      href="https://aur.archlinux.org/packages/pyspread/">pyspread
+                      v0.3.2</a><br>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="text-align: center;"><img style=" width:
+                      20px; height: 24px;" alt="Debian logo"
+                      src="../../images/debian-logo-small.png"
+                      align="middle"></td>
+                  <td style="text-align: left;">Debian</td>
+                  <td><a
+                      href="https://packages.debian.org/de/sid/pyspread">pyspread
+                      v0.3.3</a></td>
+                </tr>
+                <tr>
+                  <td style="text-align: center;"><img style=" width:
+                      23px; height: 24px;" alt="Mageia logo"
+                      src="../../images/mageia-logo-small.png"
+                      align="middle"></td>
+                  <td style=" text-align: left;">Mageia</td>
+                  <td><a
+href="http://rpm.pbone.net/index.php3/stat/4/idpl/27539765/dir/mageia_cauldron/com/pyspread-0.3.3-3.mga5.x86_64.rpm.html">pyspread
+                      v0.3.3</a></td>
+                </tr>
+                <tr>
+                  <td style="text-align: center;"><img style=" width:
+                      24px; height: 24px;" alt="Slackware logo"
+                      src="../../images/slackware-logo-small.png"><br>
+                  </td>
+                  <td style="text-align: left;">Slackware</td>
+                  <td><a
+                      href="http://slackbuilds.org/repository/14.1/office/pyspread/">pyspread
+                      v0.3.2</a></td>
+                </tr>
+                <tr>
+                  <td style="vertical-align: top; text-align: center;"><img
+                      style=" width: 24px; height: 24px;" alt="Ubuntu
+                      logo" src="../../images/ubuntu-logo-small.png"
+                      align="middle"></td>
+                  <td style="vertical-align: top;">Ubuntu</td>
+                  <td style="vertical-align: top;"><a
+                      href="http://packages.ubuntu.com/de/vivid/pyspread">pyspread
+                      v0.3.3</a></td>
+                </tr>
+              </tbody>
+            </table>
+            <br>
+            For these distributions, the easiest way is to install
+            pyspread from the repositories. The source distribution can
+            also be used e.g. if the packaged version is outdated.<br>
           </td>
         </tr>
         <tr>
-          <th style="vertical-align: top; width: 102px;"> installation<br>
-            (windows)<br>
+          <th style="vertical-align: top; width: 102px;">windows<br>
           </th>
-          <td style="vertical-align: top;">These instructions include
-            steps for installing prerequisites. In order to make Windows
+          <td style="vertical-align: top;">If you use Windows, please
+            follow these instructions. In order to make Windows
             installation easier, I have added links for 32 bit and for
             64 bit Windows. All links result from a Web search. The
             linked content is untested.<br>
@@ -177,11 +111,14 @@ href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=se
                 Make sure to use the Python2 version.<br>
                 <br>
               </li>
-              <li>Download and install Cairo and pycairo. You may get working binaries 
-              <a href="http://www.lfd.uci.edu/~gohlke/pythonlibs/">here</a>.<br> <br>
+              <li>Download and install Cairo and pycairo. You can find
+                working binaries <a
+                  href="http://www.lfd.uci.edu/%7Egohlke/pythonlibs/">here</a>.<br>
+                <br>
               </li>
               <li>Download and install <a
                   href="http://www.wxpython.org/download.php#stable">wxPython
+
 
                   2.8.x</a>.<br>
                 <br>
@@ -224,10 +161,16 @@ href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=se
                 <br>
               </li>
               <li>Start pyspread by double-clicking on the file
-                pyspread.bat in the extraction directory<br>
-                <br>
-              </li>
+                pyspread.bat in the extraction directory</li>
             </ol>
+          </td>
+        </tr>
+        <tr>
+          <th style="vertical-align: top; width: 102px;">os/x<br>
+          </th>
+          <td style="vertical-align: top;"> pyspread is not officially
+            supported on OS/X.<br>
+            However, the source distribution has been reported to work.<br>
           </td>
         </tr>
       </tbody>
@@ -236,4 +179,5 @@ href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=se
     <p><span style="font-style: italic;">Copyright Martin Manns<br>
         Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
           style="font-style: italic;">
-      </span> <span style="font-style: italic;">Last changed: 14. December 2014</span></p>
+      </span> <span style="font-style: italic;">Last changed: 17.
+        December 2014</span></p>
