Linux distro logos fixed

--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -39,7 +39,7 @@ href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.4.tar.gz#md5
                 <tr>
                   <td style="text-align: center;"><img style=" width:
                       24px; height: 24px;" alt="Arch logo"
-                      src="../../images/arch-logo-small.png"
+                      src="http://manns.github.io/pyspread/images/arch-logo-small.png"
                       align="middle"><br>
                   </td>
                   <td style="text-align: left;">Arch</td>
@@ -51,7 +51,7 @@ href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.4.tar.gz#md5
                 <tr>
                   <td style="text-align: center;"><img style=" width:
                       20px; height: 24px;" alt="Debian logo"
-                      src="../../images/debian-logo-small.png"
+                      src="http://manns.github.io/pyspread/images/debian-logo-small.png"
                       align="middle"></td>
                   <td style="text-align: left;">Debian</td>
                   <td><a
@@ -61,7 +61,7 @@ href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.4.tar.gz#md5
                 <tr>
                   <td style="text-align: center;"><img style=" width:
                       23px; height: 24px;" alt="Mageia logo"
-                      src="../../images/mageia-logo-small.png"
+                      src="http://manns.github.io/pyspread/images/mageia-logo-small.png"
                       align="middle"></td>
                   <td style=" text-align: left;">Mageia</td>
                   <td><a
@@ -71,7 +71,7 @@ href="http://rpm.pbone.net/index.php3/stat/4/idpl/27539765/dir/mageia_cauldron/c
                 <tr>
                   <td style="text-align: center;"><img style=" width:
                       24px; height: 24px;" alt="Slackware logo"
-                      src="../../images/slackware-logo-small.png"><br>
+                      src="http://manns.github.io/pyspread/images/slackware-logo-small.png"><br>
                   </td>
                   <td style="text-align: left;">Slackware</td>
                   <td><a
@@ -81,7 +81,7 @@ href="http://rpm.pbone.net/index.php3/stat/4/idpl/27539765/dir/mageia_cauldron/c
                 <tr>
                   <td style="vertical-align: top; text-align: center;"><img
                       style=" width: 24px; height: 24px;" alt="Ubuntu
-                      logo" src="../../images/ubuntu-logo-small.png"
+                      logo" src="http://manns.github.io/pyspread/images/ubuntu-logo-small.png"
                       align="middle"></td>
                   <td style="vertical-align: top;">Ubuntu</td>
                   <td style="vertical-align: top;"><a
