Windows installation instructions polished

--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -24,7 +24,7 @@ href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.4.tar.gz#md5
                 <br>
               </li>
               <li>Type in <br>
-                <tt>python setup.py install </tt></li>
+                <tt>python setup.py install</tt></li>
             </ol>
           </td>
         </tr>
@@ -33,7 +33,7 @@ href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.4.tar.gz#md5
           <td style="vertical-align: top;"> The following distributions
             provide pyspread as a package (latest release linked):<br>
             <br>
-            <table style=" text-align: left; width: 325px;" border="1"
+            <table style=" text-align: left; width: 325px;" border="0"
               cellpadding="4" cellspacing="0">
               <tbody>
                 <tr>
@@ -99,28 +99,22 @@ href="http://rpm.pbone.net/index.php3/stat/4/idpl/27539765/dir/mageia_cauldron/c
         <tr>
           <th style="vertical-align: top; width: 102px;">windows<br>
           </th>
-          <td style="vertical-align: top;">If you use Windows, please
+          <td style="vertical-align: top;">For Windows, please
             follow these instructions. In order to make Windows
-            installation easier, I have added links for 32 bit and for
-            64 bit Windows. All links result from a Web search. The
-            linked content is untested.<br>
+            installation easier, links point to sites where both 32 bit and to 64 bit versions are provided.<br>
             <ol>
-              <li>Download and install Python, numpy and matplotlib. You
-                can find 32bit and 64bit packages in <a
-                  href="https://code.google.com/p/winpython/">winpython</a>.
-                Make sure to use the Python2 version.<br>
-                <br>
+              <li>Download and install Python, numpy and matplotlib.
+                You can find 32bit and 64bit packages of WinPython <a
+                  href="http://winpython.sourceforge.net/">here</a>.
+                Make sure to get the Python2 version.
+                If WinPython is used then the WinPython control panel is recommended for all installations.<br> <br>
               </li>
-              <li>Download and install Cairo and pycairo. You can find
-                working binaries <a
-                  href="http://www.lfd.uci.edu/%7Egohlke/pythonlibs/">here</a>.<br>
+              <li>Download and install Cairo and pycairo. Working binaries are available <a
+                  href="http://www.lfd.uci.edu/%7Egohlke/pythonlibs/">here</a>. Note that Cairo has to be installed by maunually copying it. Make sure to read the installation instructions.<br>
                 <br>
               </li>
               <li>Download and install <a
-                  href="http://www.wxpython.org/download.php#stable">wxPython
-
-
-                  2.8.x</a>.<br>
+                  href="http://www.wxpython.org/download.php#stable">wxPython 2.8.x</a>.<br>
                 <br>
               </li>
               <li>Download and install gnupg (<a
@@ -142,22 +136,7 @@ href="http://rpm.pbone.net/index.php3/stat/4/idpl/27539765/dir/mageia_cauldron/c
                 follows:<br>
                 <br>
               </li>
-              <li>Log in as Administrator<br>
-                <br>
-              </li>
-              <li>Start cmd <br>
-                <br>
-              </li>
-              <li>cd to the extraction directory <br>
-                <br>
-              </li>
-              <li>Type in <br>
-                <tt>python setup.py install <br>
-                  <br>
-                </tt></li>
-              <li>Download and extract the pyspread tarball (e. g. with
-                7zip)<br>
-                <br>
+              <li>Download and install the source distribution of pyspread<br>
                 <br>
               </li>
               <li>Start pyspread by double-clicking on the file
@@ -168,7 +147,7 @@ href="http://rpm.pbone.net/index.php3/stat/4/idpl/27539765/dir/mageia_cauldron/c
         <tr>
           <th style="vertical-align: top; width: 102px;">os/x<br>
           </th>
-          <td style="vertical-align: top;"> pyspread is not officially
+          <td style="vertical-align: top;">Pyspread is not officially
             supported on OS/X.<br>
             However, the source distribution has been reported to work.<br>
           </td>
