Futher download page polish

--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -27,6 +27,7 @@ href="https://pypi.python.org/packages/source/p/pyspread/pyspread-0.4.tar.gz#md5
                 <tt>python setup.py install</tt></li>
             </ol>
           </td>
+          <td style="width: 211px;"></td>
         </tr>
         <tr>
           <th style="vertical-align: top; width: 102px;">linux</th>
@@ -95,6 +96,7 @@ href="http://rpm.pbone.net/index.php3/stat/4/idpl/27539765/dir/mageia_cauldron/c
             pyspread from the repositories. The source distribution can
             also be used e.g. if the packaged version is outdated.<br>
           </td>
+          <td style="width: 211px;"></td>
         </tr>
         <tr>
           <th style="vertical-align: top; width: 102px;">windows<br>
@@ -143,6 +145,7 @@ href="http://rpm.pbone.net/index.php3/stat/4/idpl/27539765/dir/mageia_cauldron/c
                 pyspread.bat in the extraction directory</li>
             </ol>
           </td>
+          <td style="width: 211px;"></td>
         </tr>
         <tr>
           <th style="vertical-align: top; width: 102px;">os/x<br>
@@ -151,6 +154,7 @@ href="http://rpm.pbone.net/index.php3/stat/4/idpl/27539765/dir/mageia_cauldron/c
             supported on OS/X.<br>
             However, the source distribution has been reported to work.<br>
           </td>
+          <td style="width: 211px;"></td>
         </tr>
       </tbody>
     </table>
