Pyspread presentation added

--- a/_includes/content/docs.html
+++ b/_includes/content/docs.html
@@ -40,6 +40,19 @@
         </tr>
 
         <tr>
+            <th style="vertical-align: top;">use case<br></th>
+
+            <td style="vertical-align: top;">
+                Presentations with pyspread: <a href="https://manns.github.io/pyspread/examples/pyspread_presentation.pdf">Example</a>
+		(<a href="https://manns.github.io/pyspread/examples/pyspread_presentation.pys">pys file</a>)<br>
+            </td>
+
+            <td style="vertical-align: top;"><br></td>
+
+            <td style="vertical-align: top;"><br></td>
+        </tr>
+
+        <tr>
             <th style="vertical-align: top;">podcast<br></th>
 
             <td style="vertical-align: top;">
