Doc page polished and last updated date corrected

--- a/_includes/content/docs.html
+++ b/_includes/content/docs.html
@@ -43,7 +43,7 @@
             <th style="vertical-align: top;">use case<br></th>
 
             <td style="vertical-align: top;">
-                Presentations with pyspread: <a href="https://manns.github.io/pyspread/examples/pyspread_presentation.pdf">Example</a>
+                <a href="https://manns.github.io/pyspread/examples/pyspread_presentation.pdf">Presentations with pyspread</a>
 		(<a href="https://manns.github.io/pyspread/examples/pyspread_presentation.pys">pys file</a>)<br>
             </td>
 
@@ -70,4 +70,4 @@
 <p><span style="font-style: italic;">Copyright Martin Manns<br>
 Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br style=
 "font-style: italic;"></span> <span style="font-style: italic;">Last changed:
-14. May 2013</span></p>
+21. December 2014</span></p>
